// If npx -p @dbml/cli dbml2sql dbml/main.dbml --postgres -o migrations/new_migration/up.sql fails use the playground
// https://dbml.dbdiagram.io/playground/

Enum "account_type" {
  "asset"
  "liability"
  "equity"
  "revenue"
  "expense"
}

Enum "posting_direction" {
  "debit"
  "credit"
}

Table "accounts" {
  "id" bigserial [pk, increment]
  "client_id" varchar(64) [not null, unique]
  "account_type" account_type [not null]
  "name" varchar [not null]
  "active" bool [not null, default: false]
  // TigerBeetle-inspired 4-column balance: no separate balances table
  "debits_posted" bigint [not null, default: 0]
  "credits_posted" bigint [not null, default: 0]
  "amount_pending" bigint [not null, default: 0]
  "created_at" timestamptz [not null, default: `now()`]
}

Table "ledger_lines" {
  "id" bigserial [pk, increment]
  "journal_entry_id" bigint [not null, ref: > journal_entries.id]
  "account" bigint [not null, ref: - accounts.id]
  "amount" bigint [not null]
  "direction" posting_direction [not null]
  "created_at" timestamptz [not null, default: `now()`]

  checks {
    `amount > 0` [name: 'ledger_lines_positive_amount']
  }

  note: 'Immutable — no UPDATE or DELETE allowed (enforced by trigger)'
}

Table "journal_entries" {
  "id" bigserial [pk, increment]
  "client_id" varchar(64) [not null, unique]
  "created_at" timestamptz [not null, default: `now()`]

  note: 'Immutable — no UPDATE or DELETE allowed (enforced by trigger)'
}

Table account_blocks {
  "id" bigserial [pk, increment]
  "client_id" varchar(64) [not null, unique]
  "account_id" bigint [not null, ref: - accounts.id]
  "amount" bigint [not null]
  "released" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
}

// Transactional outbox — events written atomically with the balance update and
// relayed to the in-process EventBus by OutboxRelay. delivered_at is stamped
// once the event has been published; NULL rows are pending delivery.
Table outbox {
  "id" bigserial [pk, increment]
  "event_type" varchar [not null]
  "payload" jsonb [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "delivered_at" timestamptz

  indexes {
    (id) [name: 'outbox_undelivered', where: `delivered_at IS NULL`]
  }
}
